<?xml version="1.0" encoding="UTF-8"?>
<!--
  RFB Java SDK — 主 POM（parent + 主 jar 构建）。

  主代码位于本目录 src/main/java/io/rfb/sdk（公共门面 io.rfb.sdk 与内部协议实现
  io.rfb.sdk.internal），本 POM 的主构建产物即 io.rfb:rfb-sdk jar。Maven 3 要求
  aggregator 必须是 packaging=pom，而本 POM 需要产出 rfb-sdk jar，因此不能声明
  <modules>；tests 模块（io.rfb:rfb-sdk-tests）独立构建并依赖 io.rfb:rfb-sdk，
  需先在本目录 mvn install 再以 -f tests/pom.xml 运行测试。
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.rfb</groupId>
  <artifactId>rfb-sdk</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>

  <name>rfb-sdk</name>
  <description>RFB Java SDK: unified RfbClient facade over forkd controller (HTTP/JSON), forkd guest (TCP NDJSON) and ZBRT v1 (binary frames) — mirror port of the Rust reference implementation</description>

  <!-- Maven Central hard requirements: project URL, license, SCM, developers. -->
  <url>https://github.com/Cricle/rfb</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://github.com/Cricle/rfb/blob/main/LICENSE-MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/Cricle/rfb</url>
    <connection>scm:git:git://github.com/Cricle/rfb.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/Cricle/rfb.git</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>Cricle</id>
      <name>Cricle</name>
      <email>qnydhuaji@gmail.com</email>
    </developer>
  </developers>

  <!-- Release target: GitHub Packages (maven.pkg.github.com/Cricle/rfb).
       Auth comes from the `github` server entry in settings.xml provisioned by
       .github/workflows/release.yml (GITHUB_TOKEN, packages:write). -->
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/Cricle/rfb</url>
    </repository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>8</maven.compiler.release>
    <jackson.version>2.17.2</jackson.version>
    <junit.version>5.10.2</junit.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <!--
    发布 profile（仅 CI 的 tag 发布使用：mvn -Pcentral-release deploy）。
    Maven Central 硬性要求：sources jar、javadoc jar、GPG 签名、经
    central-publishing-maven-plugin 上传（凭据取 settings.xml 中 id=central
    的 <server>，由 release.yml 从 secret MAVEN_KEY 生成）。
  -->
  <profiles>
    <profile>
      <id>central-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.6.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>true</autoPublish>
              <waitUntil>published</waitUntil>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals><goal>jar-no-fork</goal></goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.6.3</version>
            <configuration>
              <doclint>none</doclint>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals><goal>jar</goal></goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.4</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals><goal>sign</goal></goals>
              </execution>
            </executions>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
